<resources>
    <!-- Generated by Automatic String Resource Translation -->
    <!--          https://asrt.gluege.boerde.de             -->
    <string name="app_name">Stapp</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="is_empty">%1$s cannot be empty</string>
    <string name="email">E-mail</string>
    <string name="email_not_valid">Invalid e-mail</string>
    <string name="message_login">Hey,\nLogin Now</string>
    <string name="no_account_message">Don\'t have an account? /</string>
    <string name="create_new"><u>Create new</u>  </string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="join_us">Join us</string>
    <string name="register">List</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="no_data">No data</string>
    <string name="something_wrong_msg">An error occurred, refresh to reload</string>
    <string name="user_image">User\'s photo</string>
    <string name="the_story_of">Stories from</string>
    <string name="close">Closed</string>
    <string name="take_photo_from_camera">Take a photo from the camera</string>
    <string name="take_photo_from_gallery">Take a photo from Gallery</string>
    <string name="upload">Uploads</string>
    <string name="enter_description">Enter a Description</string>
    <string name="description">Description</string>
    <string name="please_set_photo">Please select a photo</string>
    <string name="add_story_success">Success adding stories</string>
    <string name="no_permission">Did not get permissions.</string>
    <string name="you_re_connected_with">You are Connected \nwith an account</string>
    <string name="logout">Logout</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_denied_msg">Permission has been denied before, please go to settings to set permissions</string>
    <string name="password_less_than_eight">Password must be more than 7 characters</string>
    <string name="localization">Localization</string>
    <string name="show_location">Show Location</string>
    <string name="your_location_not_found">Your location is not found. Try Again</string>
    <string name="choose_a_picture">Choose a Picture</string>
    <string name="no_location_registered">No Location registered</string>
    <string name="retry"><u>Retry</u></string>
    <string name="by_map">By Map</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="show_on_map">Show on map</string>
    <string name="failed_to_show_camera">Failed to show camera</string>
    <string name="failed_to_take_picture">Failed to take picture</string>
    <string name="title_camera">Camera</string>
    <!-- Generated by Automatic String Resource Translation -->
    <!--          https://asrt.gluege.boerde.de             -->
</resources>