...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
